--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+    
+  http: ^0.12.0+4
+  
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
