--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,16 @@ dependencies:
     
   http: ^0.12.0+4
   shared_preferences: ^0.5.6+2
-  
+  mobx:
+  flutter_mobx:
+
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner:
+  mobx_codegen:
 
 
 flutter:
