--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,10 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
-  # assets:
+  
+  assets:
+    - assets/
+    - assets/sql/
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
 
