--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   http: ^0.12.0+4
   shared_preferences: ^0.5.6+2
   sqflite: ^1.3.0
+  cached_network_image: ^2.0.0
+  connectivity: ^0.4.8+2
   
   cupertino_icons: ^0.1.2
 
@@ -24,7 +26,7 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
-  
+
   assets:
     - assets/
     - assets/sql/
